--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background-color: black; /* Fond noir */
+    background-color: #211f2a;
     color: white;
     display: flex;
     justify-content: center;
@@ -11,7 +11,7 @@ body {
 }
 
 .form-container {
-    background-color: #252836; /* Boîte légèrement plus claire */
+    background-color: #252836;
     padding: 20px 30px;
     border-radius: 15px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
