Ajout du footer dans viewConnexion.php à tester

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,3 +68,11 @@ a {
 a:hover {
     text-decoration: underline;
 }
+
+footer {
+    background-color: #211f2a;
+    color: #ffffff; 
+    text-align: center; 
+    padding: 20px 0;
+    font-size: 14px;
+  }
