--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,9 +4,9 @@ body {
     font-family: Arial, sans-serif;
     background-color: #211f2a;
     color: white;
-    display: flex;
+    /* display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
     height: 100vh;
 }
 
@@ -75,4 +75,103 @@ footer {
     text-align: center; 
     padding: 20px 0;
     font-size: 14px;
-  }
+    position: relative;
+}
+
+header {
+    background-color: #252836;
+    display: flex;
+    justify-content: center;
+    padding: 10px 0;
+}
+
+/* style accueil */
+.container {
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
+    align-items: center;
+}
+
+#navigation a button {
+    margin-left: 10px;
+    padding: 10px 15px;
+    background-color: #6757d6;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 14px;
+    transition: background-color 0.3s ease;
+}
+
+#navigation a button:hover {
+    background-color: #ff8f81;
+}
+
+#banniereSalutation h1{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    font-size: 2.5rem;
+    text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.8);
+    line-height: 1.5;
+}
+
+#imgBackground {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+}
+
+#banniereSalutation h1 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 2.5rem;
+    text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.8);
+    line-height: 1.5;
+}
+
+#mesJeux {
+    padding: 20px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    gap: 20px;
+    text-align: center;
+}
+
+#mesJeux h2 {
+    grid-column: 1 / -1;
+    font-size: 1.8rem;
+    margin-bottom: 20px;
+}
+
+#mesJeux img {
+    width: 100%;
+    height: 120px;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.nomJeu {
+    margin: 10px 0 5px;
+    font-size: 1.2rem;
+    color: #ff8f81;
+}
+
+.heureJouees,
+.plateformeJeu {
+    font-size: 0.9rem;
+    color: #c5c6c8;
+}
+
+.jeuBackground {
+    width: 100%;
+    height: 120px;
+    object-fit: cover;
+    border-radius: 10px;
+}
