--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,18 @@ body {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
     max-width: 400px;
     width: 100%;
+}
+
+body.connexion {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+    background-color: #211f2a;
+    color: white;
+    display: flex;
+    justify-content: center;
     align-items: center;
+    height: 100vh;
 }
 
 h1 {
