ajout footer css pour Home.php

--- a/assets/css/styleHome.css
+++ b/assets/css/styleHome.css
@@ -6,6 +6,15 @@ header {
     padding: 10px 0;
 }
 
+footer {
+    background-color: #211f2a;
+    color: #ffffff; 
+    text-align: center; 
+    padding: 20px 0;
+    font-size: 14px;
+    position: relative;
+}
+
 /* style accueil */
 .container {
     display: flex;
