--- a/assets/css/styleHome.css
+++ b/assets/css/styleHome.css
@@ -1,4 +1,3 @@
-
 header {
     background-color: #252836;
     display: flex;
@@ -39,31 +38,21 @@ footer {
     background-color: #ff8f81;
 }
 
+#banniereSalutation {
+    position: relative; 
+    text-align: center; 
+    color: black;
+}
+
 #banniereSalutation h1{
-    position: relative;
-    top: 50%;
-    left: 50%;
-    /* transform: translate(-50%, -50%); */
-    /* text-align: center; */
-    font-size: 2.5rem;
-    text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.8);
-    line-height: 1.5;
+   
 }
 
 #imgBackground {
     width: 100%;
     height: auto;
     object-fit: cover;
-}
-
-#banniereSalutation h1 {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 2.5rem;
-    text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.8);
-    line-height: 1.5;
+    display: block;
 }
 
 #mesJeux {
