--- a/assets/css/styleHome.css
+++ b/assets/css/styleHome.css
@@ -45,7 +45,12 @@ footer {
 }
 
 #banniereSalutation h1{
-   
+    text-align: left; 
+    position: relative;
+    top: 20%;
+    left: 30px; 
+    z-index: 1;
+    font-size: 2.5rem;
 }
 
 #imgBackground {
