--- a/assets/css/styleHome.css
+++ b/assets/css/styleHome.css
@@ -49,13 +49,12 @@ body {
     color: white;
 }
 
-#banniereSalutation h1{
-    text-align: left; 
-    position: relative;
-    top: 20%;
-    left: 30px; 
-    z-index: 1;
+#banniereSalutation > #l1BS { 
+    position: absolute; 
+    top: 10%; 
+    z-index: 1; /* Assure que le texte soit au-dessus de l'image */
     font-size: 2.5rem;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7); /* Ajoute une ombre pour améliorer la lisibilité */
 }
 
 #imgBackground {
@@ -66,7 +65,7 @@ body {
 }
 
 #mesJeux {
-    padding: 20px;
+    padding: 20px; /*test*/
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     gap: 20px;
