Fixation du footer en bas centré de la page

--- a/assets/css/styleHome.css
+++ b/assets/css/styleHome.css
@@ -11,7 +11,11 @@ footer {
     text-align: center; 
     padding: 20px 0;
     font-size: 14px;
-    position: relative;
+    position: fixed;
+    bottom: 0; 
+    left: 50%; /* Centre */
+    transform: translateX(-50%); /* parfaitement centré */
+    width: 100%; /*couvre toute la largeur */
 }
 
 body {
