--- a/assets/css/styleGlobal.css
+++ b/assets/css/styleGlobal.css
@@ -5,19 +5,31 @@ body {
     padding: 0;
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height: 100vh;
 }
 
 header {
+
+    width: 100%;
     background-color: #211f2a;
     display: flex;
     justify-content: center;
     padding: 10px 0;
     height: 10%;
+
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+    z-index: 1000;
 }
 
 main{
-    height: 80%;
+    top: 10%;
+    height: 90%;
+    width: 100%;
+    overflow-x: auto;
+
+    scrollbar-color: #3fedfe transparent;
+
+    font-family: 'Barlow', sans-serif;
 }
 
 footer {
@@ -26,17 +38,18 @@ footer {
     text-align: center; 
     padding: 20px 0;
     font-size: 14px;
-    position: fixed;
-    bottom: 0; 
-    left: 50%; /* Centre */
-    transform: translateX(-50%); /* parfaitement centré */
+    justify-content: center;
+    justify-items: center;
     width: 100%; /*couvre toute la largeur */
-    height: 10%;
+    height: 50px;
+}
+
+#logo {
+    height: 100%;
 }
 
 #logoDuSite {
-    width: 20%;
-    height: auto;
+    height: 100%;
 }
 
 /* style accueil */
