--- a/assets/css/styleHome.css
+++ b/assets/css/styleHome.css
@@ -22,17 +22,11 @@
 #mesJeux {
     padding: 20px; 
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
     gap: 20px;
     text-align: center;
     position: relative; /* positionner les éléments enfants correctement */
 
-}
-
-#mesJeux h2 {
-    grid-column: 1 / -1;
-    font-size: 1.8rem;
-    margin-bottom: 20px;
 }
 
 /* conteneur de chaque jeu */
@@ -41,6 +35,10 @@
     position: relative; /* Conteneur parent pour positionner les textes */
     overflow: hidden; /* Coupe les éléments qui dépassent */
     border-radius: 10px;
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+    height: 300px;
 }
 
 /* Images */
@@ -52,43 +50,66 @@
     border-radius: 10px;
 }
 
-/*textes sur l'image*/
-
-.nomJeu, .heureJouees, .plateformeJeu {
-    position: absolute; /* au-dessus de l'image */
-    width: 100%; 
-    left: 0; 
-    text-align: center; 
-    color: white; 
-    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7); /* Ombre pour améliorer la lisibilité */
-    font-weight: bold;
-}
-
 /*positionner sur la meme ligne */
 .jeuInfo {
     display: flex; /* Aligne les éléments sur une ligne */
-    justify-content: space-between; /* Titre à gauche, heures à droite */
-    align-items: center; /* Centre verticalement */
-    margin-top: 10px; /* Espace au-dessus */
     padding: 0 5px; /* Espacement horizontal */
+
+    flex-direction: row;
+
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.94) 11%, rgba(0, 0, 0, 0.78) 73%, rgba(255, 255, 255, 0) 100%);
+    height: 50%;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+
 }
 
-/* Position de chaque texte */
+.jeuInfoLeft {
+    width: 80%;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+}
+
+.jeuInfoRight {
+    width: 20%;
+    height: 100%;
+
+    display: flex;
+}
+
 .nomJeu {
-    font-size: 1.2rem;
-    color: #ff8f81;
+    margin-top: auto;
+    margin-bottom: auto;
+    color: white;
+    font-size: 1.5rem;
     font-weight: bold;
-}
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
 
-.heureJouees {
-    font-size: 1rem;
-    color: #c5c6c8;
-    font-weight: normal;
+    text-align: left;
+
+    font-style: normal;
+    font-weight: 700;
+    font-size: 40px;
 }
 
 .plateformeJeu {
-    text-align: center;
-    bottom: 10%; /* Positionne la plateforme en bas */
-    font-size: 0.9rem;
-    color: #c5c6c8;
+    margin-top: auto;
+    margin-bottom: auto;
+    color: white;
+    font-size: 1rem;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+
+    text-align: left;
 }
+
+.heureJouees {
+    margin-top: auto;
+    margin-bottom: auto;
+    color: white;
+    font-size: 1rem;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+}
+
