--- a/assets/css/styleHome.css
+++ b/assets/css/styleHome.css
@@ -19,10 +19,15 @@
     display: block;
 }
 
+#liste {
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
 #mesJeux {
     padding: 20px; 
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
     gap: 20px;
     text-align: center;
     position: relative; /* positionner les éléments enfants correctement */
@@ -38,7 +43,9 @@
     background-position: center;
     background-size: cover;
     width: 100%;
-    height: 300px;
+    height: 450px;
+
+    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.5);
 }
 
 /* Images */
