--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,9 +4,6 @@ body {
     font-family: Arial, sans-serif;
     background-color: #211f2a;
     color: white;
-    /* display: flex;
-    justify-content: center;
-    align-items: center; */
     height: 100vh;
 }
 
@@ -17,10 +14,10 @@ body {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
     max-width: 400px;
     width: 100%;
-    position: absolute; /* Permet de positionner précisément l'élément */
-    top: 50%;           /* Place l'élément au centre verticalement */
-    left: 50%;          /* Place l'élément au centre horizontalement */
-    transform: translate(-50%, -50%); /* Centre l'élément en ajustant sa position */
+    position: absolute; 
+    top: 50%;           
+    left: 50%;          
+    transform: translate(-50%, -50%); 
 }
 
 body.connexion {
