--- a/assets/css/styleHome.css
+++ b/assets/css/styleHome.css
@@ -2,14 +2,28 @@
     position: relative; 
     text-align: center; 
     color: white;
+    width: 100%;
+    height: 45%;
+
+    padding-top: 10%;
+    padding-left: 10%;
+
+    background-image: url("../images/thumbbig-1301855.png");
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
-#banniereSalutation > #l1BS { 
-    position: absolute; 
-    top: 10%; 
-    z-index: 1; /* Assure que le texte soit au-dessus de l'image */
-    font-size: 2.5rem;
-    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7); /* Ajoute une ombre pour améliorer la lisibilité */
+#titre {
+    position: absolute;
+
+    margin: 0;
+
+    text-align: left;
+    font-size: 60px;
+    font-weight: lighter;
+
+    line-height: 1.3;
+
 }
 
 #imgBackground {
