--- a/assets/css/styleHome.css
+++ b/assets/css/styleHome.css
@@ -2,7 +2,7 @@
     position: relative; 
     text-align: center; 
     color: white;
-    width: 100%;
+    width: 90%;
     height: 45%;
 
     padding-top: 10%;
@@ -19,7 +19,7 @@
     margin: 0;
 
     text-align: left;
-    font-size: 60px;
+    font-size: 360%;
     font-weight: lighter;
 
     line-height: 1.3;
