--- a/assets/css/styleAjout.css
+++ b/assets/css/styleAjout.css
@@ -28,9 +28,10 @@
 
 #recherche {
     background-color: #2b2f40;
-    height: 50px;
     border: none;
     border-radius: 10px;
+    width: 20%;
+    padding: 1%;
 }
 
 #boutonRechercher {
@@ -39,7 +40,8 @@
     height: 50px;
     border: none;
     border-radius: 10px;
-
+    width: 10%;
+    margin-top: 1%;
 }
 
 .boutonAjouter {
