Amélioration de la page

--- a/assets/css/styleJeu.css
+++ b/assets/css/styleJeu.css
@@ -15,3 +15,26 @@
     flex-direction: column;
     width: 30%;
 }
+
+#formulaire {
+    display: flex;
+    flex-direction: column;
+}
+
+.inputText {
+    background-color: #2b2f40;
+    border: none;
+    border-radius: 10px;
+    width: 20%;
+    padding: 1%;
+}
+
+.buttonForm {
+    background-color: #6757d6;
+    color: white;
+    height: 50px;
+    border: none;
+    border-radius: 10px;
+    width: 30%;
+    margin-top: 1%;
+}
