--- a/assets/css/styleHome.css
+++ b/assets/css/styleHome.css
@@ -8,6 +8,8 @@
     padding-top: 10%;
     padding-left: 10%;
 
+    text-transform: uppercase;
+
     background-image: url("../images/thumbbig-1301855.png");
     background-size: contain;
     background-repeat: no-repeat;
