--- a/assets/css/styleInscription.css
+++ b/assets/css/styleInscription.css
@@ -1,6 +1,10 @@
+footer {
+    height: 10vh;
+}
+
 .form-container {
     width: 35%;
-    height: 50%;
+    height: 70%;
     margin-left: auto;
     margin-right: auto;
 
@@ -22,7 +26,7 @@
     font-size: 200%;
 }
 
-#formulaireConnexion {
+#formulaireInscription {
     display: flex;
     flex-direction: column;
     height: 100%;
@@ -38,7 +42,7 @@
     margin-bottom: 2%;
 }
 
-#buttonConnexion {
+#buttonInscription {
     background-color: #6757d6;
     color: white;
     height: 50px;
@@ -48,10 +52,11 @@
     margin-top: 1%;
 }
 
-#inscription {
+#connexion {
     color: white;
     text-align: center;
     margin-top: 3%;
     text-decoration: none;
     text-align: left;
+    margin-bottom: 3%;
 }
