--- a/assets/css/styleConnexion.css
+++ b/assets/css/styleConnexion.css
@@ -1,8 +1,19 @@
+main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 85vh;
+}
+
 .form-container {
     width: 35%;
     height: 50%;
     margin-left: auto;
     margin-right: auto;
+
+    margin-top: auto;
+    margin-bottom: auto;
 
     padding-top: 2%;
     padding-left: 2%;
