--- a/assets/css/styleHome.css
+++ b/assets/css/styleHome.css
@@ -51,6 +51,7 @@
     gap: 20px;
     text-align: center;
     position: relative; /* positionner les éléments enfants correctement */
+    width: 100%;
 
 }
 
