--- a/assets/css/styleInscription.css
+++ b/assets/css/styleInscription.css
@@ -1,5 +1,9 @@
-footer {
-    height: 10vh;
+main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 85vh;
 }
 
 .form-container {
@@ -7,6 +11,9 @@ footer {
     height: 70%;
     margin-left: auto;
     margin-right: auto;
+
+    margin-top: auto;
+    margin-bottom: auto;
 
     padding-top: 2%;
     padding-left: 2%;
