--- a/assets/css/styleInscription.css
+++ b/assets/css/styleInscription.css
@@ -8,15 +8,16 @@ main {
 
 .form-container {
     width: 35%;
-    height: 70%;
+    height: 75%;
     margin-left: auto;
     margin-right: auto;
 
     margin-top: auto;
     margin-bottom: auto;
 
-    padding-top: 2%;
+    padding-top: 1%;
     padding-left: 2%;
+    padding-bottom: 1%;
 
     display: flex;
     flex-direction: column;
@@ -44,7 +45,7 @@ main {
     border: none;
     border-radius: 10px;
     width: 90%;
-    height: 10%;
+    height: 8%;
     padding: 1%;
     margin-bottom: 2%;
 }
@@ -56,14 +57,13 @@ main {
     border: none;
     border-radius: 10px;
     width: 25%;
-    margin-top: 1%;
 }
 
 #connexion {
     color: white;
     text-align: center;
-    margin-top: 3%;
     text-decoration: none;
     text-align: left;
-    margin-bottom: 3%;
+    margin-bottom: 2%;
+    margin-top: 3%;
 }
