--- a/assets/css/styleAjout.css
+++ b/assets/css/styleAjout.css
@@ -8,6 +8,8 @@
 #liste {
     margin-left: 7%;
     margin-right: 7%;
+
+    min-height: 49vh;
 }
 
 #rechercheTitre {
@@ -28,6 +30,7 @@
 
 #recherche {
     background-color: #2b2f40;
+    color: white;
     border: none;
     border-radius: 10px;
     width: 20%;
@@ -41,7 +44,7 @@
     border: none;
     border-radius: 10px;
     width: 10%;
-    margin-top: 1%;
+    margin-top: 1%; 
 }
 
 .boutonAjouter {
@@ -54,6 +57,8 @@
     width: 80%;
     margin-bottom: 10%;
     margin-left: 5%;
+
+    cursor: pointer;
 }
 
 #resultatJeux {
