--- a/assets/css/styleJeu.css
+++ b/assets/css/styleJeu.css
@@ -27,6 +27,7 @@
     border-radius: 10px;
     width: 20%;
     padding: 1%;
+    color: white;
 }
 
 .buttonForm {
@@ -37,4 +38,6 @@
     border-radius: 10px;
     width: 30%;
     margin-top: 1%;
+
+    cursor: pointer;
 }
