--- a/assets/css/styleGlobal.css
+++ b/assets/css/styleGlobal.css
@@ -65,10 +65,12 @@ footer p {
     align-items: center;
 }
 
-#navigation a button {
+#navigation a {
     margin-left: 10px;
     padding: 10px 15px;
     background-color: transparent;
+    text-decoration: none;
+    font-family: 'Barlow', sans-serif;
     color: white;
     border: none;
     border-radius: 5px;
@@ -77,6 +79,6 @@ footer p {
     transition: background-color 0.3s ease;
 }
 
-#navigation a button:hover {
+#navigation a:hover {
     background-color: #9586f7;
 }
