--- a/assets/css/styleAjout.css
+++ b/assets/css/styleAjout.css
@@ -54,9 +54,15 @@
     height: 50px;
     border: none;
     border-radius: 10px;
-    width: 80%;
     margin-bottom: 10%;
     margin-left: 5%;
+
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+
+    width: fit-content;
 
     cursor: pointer;
 }
