--- a/assets/css/styleAjoutFormulaire.css
+++ b/assets/css/styleAjoutFormulaire.css
@@ -12,8 +12,14 @@
     height: 50px;
     border: none;
     border-radius: 10px;
-    width: 10%;
     margin-top: 1%;
+
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+
+    width: fit-content;
 }
 
 h2 {
