--- a/assets/css/styleConnexion.css
+++ b/assets/css/styleConnexion.css
@@ -57,8 +57,14 @@ main {
     height: 50px;
     border: none;
     border-radius: 10px;
-    width: 25%;
     margin-top: 1%;
+
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+
+    width: fit-content;
 }
 
 #inscription {
