--- a/assets/css/styleJeu.css
+++ b/assets/css/styleJeu.css
@@ -31,13 +31,16 @@
 }
 
 .buttonForm {
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     background-color: #6757d6;
     color: white;
-    height: 50px;
     border: none;
     border-radius: 10px;
-    width: 30%;
     margin-top: 1%;
 
     cursor: pointer;
+    width: fit-content;
 }
