--- a/assets/css/styleConnexion.css
+++ b/assets/css/styleConnexion.css
@@ -74,3 +74,10 @@ main {
     text-decoration: none;
     text-align: left;
 }
+
+.error {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 10%;
+}
