--- a/assets/css/styleGlobal.css
+++ b/assets/css/styleGlobal.css
@@ -82,3 +82,18 @@ footer p {
 #navigation a:hover {
     background-color: #9586f7;
 }
+
+.error {
+    background-color: red;
+    color: white;
+    text-align: center;
+    margin-bottom: 1%;
+    margin-top: 1%;
+    border-radius: 10px;
+
+    width: 35%;
+    margin-left: auto;
+    margin-right: auto;
+
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
