--- a/assets/css/styleAjout.css
+++ b/assets/css/styleAjout.css
@@ -45,6 +45,11 @@
     border-radius: 10px;
     width: 10%;
     margin-top: 1%; 
+    transition: transform 0.9s;
+}
+
+#boutonRechercher:hover {
+    transform: scale(1.1);
 }
 
 .boutonAjouter {
@@ -65,8 +70,13 @@
     width: fit-content;
 
     cursor: pointer;
+
+    transition: transform 0.9s;
 }
 
+.boutonAjouter:hover {
+    transform: scale(1.1);
+}
 #resultatJeux {
  
     display: grid;
@@ -89,6 +99,11 @@
     height: 400px;
 
     box-shadow: 0 5px 5px rgba(0, 0, 0, 0.5);
+    transition: transform 0.9s;
+}
+
+.jeu:hover {
+    transform: scale(1.1);
 }
 
 /* Images */
