--- a/assets/css/styleAjoutFormulaire.css
+++ b/assets/css/styleAjoutFormulaire.css
@@ -20,6 +20,11 @@
     padding-bottom: 10px;
 
     width: fit-content;
+    transition: transform 0.9s;
+}
+
+#buttonAjout:hover {
+    transform: scale(1.1);
 }
 
 h2 {
