--- a/assets/css/styleConnexion.css
+++ b/assets/css/styleConnexion.css
@@ -65,6 +65,12 @@ main {
     padding-bottom: 10px;
 
     width: fit-content;
+
+    transition: transform 0.9s;
+}
+
+#buttonConnexion:hover {
+    transform: scale(1.1);
 }
 
 #inscription {
