--- a/assets/css/styleEditProfil.css
+++ b/assets/css/styleEditProfil.css
@@ -39,6 +39,11 @@ button {
     font-weight: bold;
     margin-bottom: 2%;
     width: fit-content;
+    transition: transform 0.9s;
+}
+
+button:hover {
+    transform: scale(1.1);
 }
 
 .error{
