--- a/assets/css/styleHome.css
+++ b/assets/css/styleHome.css
@@ -67,6 +67,11 @@
     height: 400px;
 
     box-shadow: 0 5px 5px rgba(0, 0, 0, 0.5);
+    transition: transform 0.9s;
+}
+
+.jeu:hover {
+    transform: scale(1.1);
 }
 
 /* Images */
