--- a/assets/css/styleInscription.css
+++ b/assets/css/styleInscription.css
@@ -64,6 +64,12 @@ main {
     padding-bottom: 10px;
 
     width: fit-content;
+
+    transition: transform 0.9s;
+}
+
+#buttonInscription:hover {
+    transform: scale(1.1);
 }
 
 #connexion {
