--- a/assets/css/styleClassement.css
+++ b/assets/css/styleClassement.css
@@ -19,9 +19,19 @@ table {
 .niv1{
     background-color: #252836;
     height: 50px;
+    transition: transform 0.9s;
+}
+
+.niv1:hover {
+    transform: scale(1.1);
 }
 
 .niv2{
     background-color: #211f2a;
     height: 50px;
+    transition: transform 0.9s;
+}
+
+.niv2:hover {
+    transform: scale(1.1);
 }
