Ajout de nouvelles animations

--- a/assets/css/styleConnexion.css
+++ b/assets/css/styleConnexion.css
@@ -66,10 +66,11 @@ main {
 
     width: fit-content;
 
-    transition: transform 0.9s;
+    transition: transform 0.9s, background-color 0.9s;
 }
 
 #buttonConnexion:hover {
+    background-color: #1800b4;
     transform: scale(1.1);
 }
 
