--- a/assets/css/styleAjout.css
+++ b/assets/css/styleAjout.css
@@ -45,10 +45,11 @@
     border-radius: 10px;
     width: 10%;
     margin-top: 1%; 
-    transition: transform 0.9s;
+    transition: transform 0.9s, background-color 0.9s;
 }
 
 #boutonRechercher:hover {
+    background-color: #1800b4;
     transform: scale(1.1);
 }
 
@@ -71,10 +72,11 @@
 
     cursor: pointer;
 
-    transition: transform 0.9s;
+    transition: transform 0.9s, background-color 0.9s;
 }
 
 .boutonAjouter:hover {
+    background-color: #1800b4;
     transform: scale(1.1);
 }
 #resultatJeux {
