--- a/assets/css/styleAjoutFormulaire.css
+++ b/assets/css/styleAjoutFormulaire.css
@@ -20,10 +20,11 @@
     padding-bottom: 10px;
 
     width: fit-content;
-    transition: transform 0.9s;
+    transition: transform 0.9s, background-color 0.9s;
 }
 
 #buttonAjout:hover {
+    background-color: #1800b4;
     transform: scale(1.1);
 }
 
