--- a/assets/css/styleEditProfil.css
+++ b/assets/css/styleEditProfil.css
@@ -39,10 +39,11 @@ button {
     font-weight: bold;
     margin-bottom: 2%;
     width: fit-content;
-    transition: transform 0.9s;
+    transition: transform 0.9s, background-color 0.9s;
 }
 
 button:hover {
+    background-color: #1800b4;
     transform: scale(1.1);
 }
 
