--- a/assets/css/styleInscription.css
+++ b/assets/css/styleInscription.css
@@ -65,10 +65,11 @@ main {
 
     width: fit-content;
 
-    transition: transform 0.9s;
+    transition: transform 0.9s, background-color 0.9s;
 }
 
 #buttonInscription:hover {
+    background-color: #1800b4;
     transform: scale(1.1);
 }
 
