--- a/assets/css/styleHome.css
+++ b/assets/css/styleHome.css
@@ -124,7 +124,7 @@
     margin-top: auto;
     margin-bottom: auto;
     color: white;
-    font-size: 1.5rem;
+    font-size: xx-large;
     font-weight: bold;
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
 
@@ -134,7 +134,7 @@
 
     font-style: normal;
     font-weight: 700;
-    font-size: 300%;
+
 }
 
 .plateformeJeu {
